src/test/ui/impl-trait/region-escape-via-bound.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/region-escape-via-bound.rs:11:13
   |
LL | trait Trait<'a> { }
   |            -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/region-escape-via-bound.rs:15:29
   |
LL | fn foo(x: Cell<&'x u32>) -> impl Trait<'y>
   |                             ^^^^^^^^^^^^^^
   |
note: hidden type `std::cell::Cell<&'x u32>` captures the lifetime 'x as defined on the function body at 17:7
  --> $DIR/region-escape-via-bound.rs:17:7
   |
LL | where 'x: 'y
   |       ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
